feat: implementa CRUD de Item de Cardápio e refatora algumas classes